# example_codes

./: LICENSE  README.md
cpp/Choelsky/: CMakeLists.txt  Choelsky.cpp  Choelsky.h  Choelsky_driver.cpp  Exception.cpp  Exception.h  Makefile
cpp/Cholesky/: Cholesky.cpp  Cholesky.h  Cholesky_driver.cpp  Exception.cpp  Exception.h  Makefile
cpp/alpha_beta_filter/: CMakeLists.txt  alpha_beta_filter.cpp  alpha_beta_filter.h  testMain.cpp
cpp/ch9_dynamics_cpp/: ch9_dynamics.cpp  newtonian_dynamics.ixx  plot_data_in_gnuplot.plt
cpp/doubly_linked_list_with_reverse/: dLinkedList.h  linkedListDriver.cpp
cpp/entropy_kernal_solver/entropy_kernel_solver/: CMakeLists.txt  entropy_kernel_solver.cpp
cpp/entropy_kernel_solver/: CMakeLists.txt
cpp/entropy_kernel_solver/entropy_kernel_solver/: entropy_kernel_solver.cpp  entropy_kernel_solver.h
cpp/entropy_kernel_solver/test/: CMakeLists.txt  testMain.cpp
cpp/jpg_image_reader/: image_reader.cpp  image_reader.h  testMain.cpp
cpp/matrix_multiply/: multiply_row_major_vectors.cpp
cpp/openmp_test/: simple_OMP.cpp
cpp/simple_thread_test/: simple_thread.h  simple_thread_driver.cpp
cpp/simple_threebody_sim/: CMakeLists.txt  tasks.json  threebody_sim.cpp  threebody_sim.h
cpp/views_and_Fibonacci/: fib_and_views.cpp
fortran/: GaussJordanTest.f90
fortran/GaussJordan/: GaussJordanTest.f90
fortran/Objects/: main.f90  objects.f90
fortran/Simple_Class/: mod_simple_class.f90  simple_class_driver.f90
julia/: ODE_solution_comparison.jl
julia/module_sort_example/: test_sort.jl
julia/module_sort_example/Utils/: Bubblesort.jl  Selectionsort.jl
julia/ode_solutions_comparison/: ODE_solution_comparison.jl
matlab/first_order_derivatives/: first_order_derivatives.m
python/ch9_dynamics/: ch9_dynamics.py
python/keras_1d_cnn_time_series/: keras_1D_time_series.py
